<resources>
    <string name="app_name">Amantoli</string>
    <string name="new_product">Nuevo</string>
    <string name="card_number">4152  3138  2274  1000</string>
    <string name="card_holder_name">Titular de la tarjeta</string>
    <string name="expiry_date">Fecha de vencimiento</string>
    <string name="use_as_default_payment_method">Usar como método por defecto</string>
    <string name="payment_methods">Métodos de pago</string>
    <string name="add_new_card">Agregar nueva tarjeta</string>
    <string name="add_card">Agregar</string>
    <string name="empty_favourite">¡No hay favoritos agregados!</string>
    <string name="add_to_bag">Agregar</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="configuraci_n">Configuración</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="promociones_y_cupones">Promociones y cupones</string>
    <string name="informaci_n_sobre_mis_pedidos">Información sobre mis pedidos</string>
    <string name="disponibilidad_de_productos">Disponibilidad de productos</string>
    <string name="beneficios">Beneficios</string>
    <string name="usted_a_n_no_cuenta_con_los_grandes_beneficios_de_una_cuenta_amantoli_pro_n_nrevise_las_opciones_que_tenemos_para_usted">Usted aún no cuenta con los grandes beneficios de una cuenta Amantoli Pro.\n\nRevise las opciones que tenemos para usted.</string>
    <string name="quiero_ser_pro">¡Quiero ser Pro!</string>
    <string name="idioma">Idioma</string>
    <string name="espa_ol">Español</string>
    <string name="english">English</string>
    <string name="modo_de_aplicaci_n">Modo de aplicación</string>
    <string name="inicio">Inicio</string>
    <string name="tienda">Tienda</string>
    <string name="bolsa">Bolsa</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="nombre">Darío Huallpa</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="mis_pedidos">Mis pedidos</string>
    <string name="direcciones_de_env_o">Direcciones de envío</string>
    <string name="gestionar_mis_direcciones">Gestionar mis direcciones</string>
    <string name="m_todos_de_pago">Métodos de pago</string>
    <string name="administrar_mis_m_todos_de_pago">Administrar mis tarjetas</string>
    <string name="c_digos_promocionales">Códigos promocionales</string>
    <string name="canjear_c_digos_promocionales">Canjear códigos promocionales</string>
    <string name="configuraci_n_profile_fragment">Configuración</string>
    <string name="notificaciones_contrase_a_idioma_y_m_s">Notificaciones, contraseña, idioma y más</string>
    <string name="pedidos_y_devoluciones">PEDIDOS Y DEVOLUCIONES</string>
    <string name="pedidos">Pedidos</string>
    <string name="devoluciones">Devoluciones</string>
    <string name="podr_a_gustarte">Podría gustarte</string>
    <string name="historial_de_productos_buscados">Historial de productos buscados</string>
    <string name="derechos_reservados_2022_nextia_solutions_mx">Derechos reservados 2022 @Nextia Solutions MX</string>
    <string name="pedido_3_lg_pendiente_de_env_o">Pedido #3-LG Pendiente de envío</string>
    <string name="art_culo">Artículo</string>
    <string name="cantidad">Cantidad</string>
    <string name="total">Total</string>
    <string name="rastrear_pedido">Rastrear pedido</string>
    <string name="total_del_pedido_11_300">Total del pedido: $11,300</string>
    <string name="pedido_2_lg_entregado">Pedido #2-LG Entregado</string>
    <string name="_16_11_2022">16/11/2022</string>
    <string name="env_o_200">Envío: $200</string>
    <string name="pedido_1_lg_entregado">Pedido #1-LG Entregado</string>
    <string name="total_del_pedido_1_150">Total del pedido: $1,150</string>
    <string name="pedido_0_lg_devoluci_n_completa">Pedido #0-LG Devolución completa</string>
    <string name="total_del_pedido_1_100">Total del pedido: $1,100</string>
    <string name="historial_de_pedidos">Historial de pedidos</string>
    <string name="promociones">PROMOCIONES</string>
    <string name="agregue_un_c_digo_promocional">AGREGUE UN CÓDIGO PROMOCIONAL</string>
    <string name="introduce_el_c_digo">Introduce el código</string>
    <string name="agregar">AGREGAR</string>
    <string name="mis_c_digos">Mis códigos</string>
    <string name="direcciones_de_env_o_activity">Direcciones de envío</string>
    <string name="direcci_n_1_trabajo">Dirección #1 - Trabajo</string>
    <string name="predeterminada">Predeterminada</string>
    <string name="direcci_n_2_casa">Dirección #2 - Casa</string>
    <string name="agregar_direcci_n">AGREGAR DIRECCIÓN</string>
    <string name="nombre_clave">Nombre clave</string>
    <string name="calle_y_n_mero">Calle y número</string>
    <string name="colonia_y_c_digo_postal">Colonia y código postal</string>
    <string name="ciudad_y_estado">Ciudad y estado</string>
    <string name="categor_as">Categorías</string>
    <string name="gran_variedad">Gran variedad</string>
    <string name="alfarer_a">Alfarería</string>
    <string name="ropa">Ropa</string>
    <string name="joyer_a">Joyería</string>
    <string name="bolsas">Bolsas</string>
    <string name="pinturas">Pinturas</string>
    <string name="esculturas">Esculturas</string>
    <string name="juguetes">Juguetes</string>
    <string name="varios">Varios</string>
    <string name="ver">VER</string>
    <string name="el_mejor_arte_solo_en_amantoli">El mejor arte solo en Amantoli</string>
    <string name="lo_mejor_solo_en_amantoli">Lo mejor solo en Amantoli</string>
    <string name="lo_m_s_reciente">Lo más reciente</string>
    <string name="ver_m_s">Ver más</string>
    <string name="nuevos_productos_en_amantoli">Nuevos productos en Amantoli</string>
    <string name="a_la_venta_ya">¡A la venta ya!</string>
    <string name="contenido_promocionado_en_amantoli">Contenido promocionado en Amantoli</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="subir_foto">Subir foto</string>
    <string name="tome_o_suba_una_foto_para_buscar_objetos_similares">Tome o suba una foto para buscar objetos similares</string>
    <string name="b_squeda_visual">Búsqueda visual</string>
    <string name="bolsas_category">BOLSAS</string>
    <string name="buscar">Buscar:</string>
    <string name="ordenar_por">Ordenar por:</string>
    <string name="opini_n_media_de_los_clientes">Opinión media de los clientes</string>
    <string name="precio_de_mayor_a_menor">Precio: de mayor a menor</string>
    <string name="precio_de_menor_a_mayor">Precio: de menor a mayor</string>
    <string name="lo_m_s_nuevo">Lo más nuevo</string>
    <string name="con_amantoli_pro">Con Amantoli Pro</string>
    <string name="incluir_agotado">Incluir agotado</string>
    <string name="anterior">Anterior</string>
    <string name="siguiente">Siguiente</string>
    <string name="ropa_category">ROPA</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="correo_electr_nico_login">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="recordar_correo_electr_nico"> Recordar correo electrónico</string>
    <string name="recordar_contrase_a"> Recordar contraseña</string>
    <string name="olvid_su_contrase_a">¿Olvidó su contraseña?</string>
    <string name="entrar">Entrar</string>
    <string name="no_tiene_cuenta">¿No tiene cuenta? </string>
    <string name="crear_cuenta_gratis">Crear cuenta gratis</string>
    <string name="detalle_del_producto">Detalle del producto</string>
    <string name="modelo_en_3d">Realidad Aumentada</string>
    <string name="abrir_modelo_del_producto">Experimenta esta función</string>
    <string name="valoraci_n">Valoración</string>
    <string name="ver_rese_as">Ver reseñas</string>
    <string name="puede_que_te_guste">Puede que te guste</string>
    <string name="seg_n_tu_inter_s">Según tu interés</string>
    <string name="recomendado">Recomendado</string>
    <string name="agregar_a_la_bolsa">Agregar a la bolsa</string>
    <string name="rese_as">RESEÑAS</string>
    <string name="_4_8_de_5_13_calificaciones">4.8 de 5 (5 calificaciones)</string>
    <string name="incre_bles_detalles">Increíbles detalles</string>
    <string name="ten_a_mis_dudas_pero_en_cuanto_las_vi_en_persona_se_not_la_calidad_y_sobretodo_los_detalles_lleg_a_mi_casa_sin_un_solo_rasgu_o_muy_recomendado">Tenía mis dudas, pero en cuanto las vi en persona se notó la calidad y sobretodo los detalles. Llegó a mi casa sin un solo rasguño. Muy recomendado.</string>
    <string name="de_lo_mejor">De lo mejor</string>
    <string name="est_n_muy_bonitos_y_se_nota_la_dedicaci_n_quedaron_muy_bien_en_mi_jard_n">Están muy bonitos y se nota la dedicación. Quedaron muy bien en mi jardín.</string>
    <string name="nah_de_locos">Nah de locos</string>
    <string name="pens_que_eran_m_s_chiquitos_pero_son_del_tama_o_perfecto_est_n_muy_bien_adornados">Pensé que eran más chiquitos pero son del tamaño perfecto, están muy bien adornados :)</string>
    <string name="la_neta_se_nota_la_dedicaci_n_que_le_pusieron_est_n_geniales">La neta se nota la dedicación que le pusieron, están geniales.</string>
    <string name="los_iba_a_dar_como_regalo_pero_me_encantaron_y_me_los_qued_jajaja_ya_ped_otros_porque_est_n_preciosos_los_gatitos">Los iba a dar como regalo pero me encantaron y me los quedé jajaja. Ya pedí otros porque están preciosos los gatitos.</string>
    <string name="los_am_ee">Los améee</string>
    <string name="est_n_del_tama_o_ideal_para_adornar_en_la_casa_o_el_jard_n_tienen_detalles_muy_bonitos">Están del tamaño ideal para adornar en la casa o el jardín. Tienen detalles muy bonitos</string>
    <string name="comparte_tu_opini_n_sobre_este_producto">Comparte tu opinión sobre este producto</string>
    <string name="escribir_rese_a">Escribir reseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ya_tiene_cuenta">¿Ya tiene cuenta?</string>
    <string name="iniciar_sesi_n_crear_cuenta">Iniciar sesión</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="por_nextia_solutions_mx">POR NEXTIA SOLUTIONS MX</string>
    <string name="suscripciones">SUSCRIPCIONES</string>
    <string name="elige_un_plan_de_acuerdo_a_tus_gustos_y_necesidades">Elige un plan de acuerdo a tus gustos y necesidades.</string>
    <string name="por_favor_espere">Por favor, espere …</string>
    <string name="mi_rese_a">MI RESEÑA</string>
    <string name="t_tulo">Título</string>
    <string name="an_nimo">Anónimo</string>
    <string name="rese_a">Reseña</string>
    <string name="calificaci_n">Calificación</string>
    <string name="enviar">Enviar</string>
    <string name="plan_b_sico">PLAN BÁSICO</string>
    <string name="precio">Precio</string>
    <string name="nombre_plan_sub">Nombre</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento</string>
    <string name="proceder_al_pago">PROCEDER AL PAGO</string>
    <string name="agregar_direcci_n_dialog">AGREGAR DIRECCIÓN</string>
    <string name="pago_de_pedido">PAGO DE PEDIDO</string>
    <string name="total_payment">Total</string>
    <string name="rastrear_pedido_dialog">RASTREAR PEDIDO</string>
    <string name="rastrear">RASTREAR</string>
    <string name="cantidad_fragment">Cantidad</string>
    <string name="mis_favoritos">Mis favoritos</string>
    <string name="quitar_de_favoritos">QUITAR DE FAVORITOS</string>
    <string name="no_hay_favoritos">¡No hay favoritos!</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="regresar_al_inicio_de_sesi_n">Regresar al inicio de sesión</string>
</resources>