<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Fragment.ProfileFragment">

    <!-- Top Bar -->

    <!--ID LINEAR LAYOUT 2-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginLeft="22dp"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_regular"
            android:text="@string/mi_perfil"
            android:textColor="@color/mainText"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


        <ImageView
            android:id="@+id/searchIv_ProfileFrag"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_search"
            app:tint="@color/mainText"
            />

    </LinearLayout>


    <!--ID LINEAR LAYOUT 3-->
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage_profileFrag"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_profile"
                app:civ_border_color="@color/black"
                app:tint="@color/mainText"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileName_profileFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/metropolis_regular"
                    android:text="@string/nombre"
                    android:textColor="@color/mainText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/profileEmail_profileFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/metropolis_regular"
                    android:text="@string/correo_electr_nico"
                    android:textColor="@color/textAd"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/uploadImage_profileFrag"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="50dp"
            android:background="@drawable/btn_bg"
            android:text="Upload Image"
            android:fontFamily="@font/metropolis_regular"/>

    </LinearLayout>

    <!--ID LINEAR LAYOUT 4-->
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <!--CARD PEDIDOS-->
        <androidx.cardview.widget.CardView
            android:id="@+id/my_orders_profile_frag"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/metropolis_regular"
                        android:text="@string/mis_pedidos"
                        android:textColor="@color/mainText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/metropolis_regular"
                        android:text="@string/historial_de_pedidos"
                        android:textColor="@color/textAd"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/tvOpenOrders"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--CARD DIRECCIONES-->
        <androidx.cardview.widget.CardView
            android:id="@+id/shippingAddressCard_ProfilePage"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/metropolis_regular"
                        android:text="@string/direcciones_de_env_o"
                        android:textColor="@color/mainText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/metropolis_regular"
                        android:text="@string/gestionar_mis_direcciones"
                        android:textColor="@color/textAd"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/tvOpenShipment"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--CARD PAGOS-->
        <androidx.cardview.widget.CardView
            android:id="@+id/paymentMethod_ProfilePage"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/metropolis_regular"
                        android:text="@string/m_todos_de_pago"
                        android:textColor="@color/mainText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/cardsNumber_profileFrag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/administrar_mis_m_todos_de_pago"
                        android:fontFamily="@font/metropolis_regular"
                        android:textColor="@color/textAd"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/tvOpenPaymentMethods"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--CARD PROMOCIONES-->
        <androidx.cardview.widget.CardView
            android:id="@+id/promo_codes_profile_frag"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/metropolis_regular"
                        android:text="@string/c_digos_promocionales"
                        android:textColor="@color/mainText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/metropolis_regular"
                        android:textColor="@color/textAd"
                        android:text="@string/canjear_c_digos_promocionales"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/tvOpenPromos"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--CARD CONFIGURACIÓN-->
        <androidx.cardview.widget.CardView
            android:id="@+id/settingCd_profileFrag"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/metropolis_regular"
                        android:text="@string/configuraci_n_profile_fragment"
                        android:textColor="@color/mainText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/metropolis_regular"
                        android:textColor="@color/textAd"
                        android:text="@string/notificaciones_contrase_a_idioma_y_m_s"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/tvOpenSettings"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--CARD LOGOUT-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cVlogout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/metropolis_regular"
                        android:text="@string/cerrar_sesi_n"
                        android:textColor="@color/mainText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/metropolis_regular"
                        android:textColor="@color/textAd"
                        android:text="@string/regresar_al_inicio_de_sesi_n"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <!--<com.airbnb.lottie.LottieAnimationView
        android:visibility="gone"
        android:id="@+id/animationView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/circle_progress" />-->


</androidx.constraintlayout.widget.ConstraintLayout>